--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FakePodcast</string>
+    <string name="base_url">http://demo4491005.mockable.io/</string>
 </resources>
