--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">FakePodcast</string>
     <string name="base_url">https://demo4491005.mockable.io/</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="label_casts">Casts</string>
+    <string name="label_collection">Collection</string>
 </resources>
